# electricstore

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
electricstore/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  filter.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
